добавлено 2 экрана, MainActivity3-4, связанные со списками мест, и добавлены картинки

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,49 @@
     <string name="title_dashboard">Избранное</string>
     <string name="title_places">Места</string>
 
+    <string-array name="mesta1">
+        <item>Парк Гагарина</item>
+        <item>Набережная</item>
+        <item>Парк Победы</item>
+        <item>Ботанический сад Самарского университета</item>
+        <item>Струковский сад</item>
+        <item>Бар Родная</item>
+
+
+
+    </string-array>
+
+    <string-array name="mesta3">
+        <item>Московское шоссе, 34Б</item>
+        <item>Молодогвардейская улица, 151</item>
+
+    </string-array>
+
+
+    <string-array name="mesta2">
+        <item>Загородный парк</item>
+        <item>Мастер-Класс ПростоАрт</item>
+        <item>Мастер-Класс Колокол</item>
+        <item>Музей Авиации и космонавтики</item>
+        <item>Музей шоколада</item>
+        <item>Бункер Сталина</item>
+        <item>КвестГуру</item>
+        <item>Бар Свойский</item>
+        <item>Бар-ресторан Smoky People</item>
+        <item>Бар Дядя Блёва</item>
+        <item>Бар На Посошок</item>
+        <item>Квест Black Duck</item>
+        <item>Кулинарные шоу CooknRun Events</item>
+        <item>Театр кукол</item>
+
+
+
+
+
+
+
+
+    </string-array>
     <string name="title_activity_page">PageActivity</string>
     <!-- Добавьте другие строки по мере необходимости -->
 </resources>
